Wed  Mar 23 2005	H. Wade Minter (minter@lunenburg.org)
     * Add code to do an XML-RPC version check on start.

Fri  Mar 18 2005	H. Wade Minter (minter@lunenburg.org)
     * Don't change the modtime on an upgrade.

Mon  Mar 14 2005	H. Wade Minter (minter@lunenburg.org)
     * Add the framework for the "bundle" import/export.

Fri  Mar 11 2005	H. Wade Minter (minter@lunenburg.org)
     * Add uploader person and category modifiers for the online search.

Thu  Mar 10 2005	H. Wade Minter (minter@lunenburg.org)
     * Get most XML-RPC stuff working in the basic case.

Tue  Mar  8 2005        H. Wade Minter (minter@lunenburg.org)
     * Add initial XML-RPC upload code.

Mon  Mar  7 2005        H. Wade Minter (minter@lunenburg.org)
     * Add a menu item to wipe the holding tank (Thanks to Rambo in Portland).

Sat  Mar  5 2005        H. Wade Minter (minter@lunenburg.org)
     * Fix typo in the Mac::AppleScript module name.
     * Always use Debug in darwin, since it's still unstable.
     * Manually specify some Tk::DragDrop modules to help with the PAR binary.
     * Fix an off-by-one in the orphan finder percentages.
     * Make date calculations relative to midnight.
     * Bump version to 2.0.4

Wed  Mar  2 2005        H. Wade Minter (minter@lunenburg.org)
     * Better reporting of module versions in the About box.

Mon  Jan 17 2005	H. Wade Minter (minter@lunenburg.org)
     * Add the beginnings of a basic plugin architecture

Wed  Jan  5 2005	H. Wade Minter (minter@lunenburg.org)
     * Change some hardcoded paths into File::Spec calls to hopefully help things
       out on Win98.

Tue  Jan  4 2005	H. Wade Minter (minter@lunenburg.org)
     * Commit the framework for the Mac application bundle.

Mon  Jan  3 2005	H. Wade Minter (minter@lunenburg.org)
     * Make things much more MacOS X friendly.  Use the now-free Audion
       instead of XMMS under X11, and use Mac::AppleScript to send AppleScript
       commands to it.
